# ChangeLog for net-p2p/freenet-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Feb 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1108.ebuild,
  +freenet-bin-0.7_beta_pre1109.ebuild:
  New upstream release

  02 Feb 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7_alpha2.ebuild,
  +freenet-bin-0.7_beta_pre1108.ebuild:
  New upstream release

  30 Jan 2008; (Tommy[D]) tommy100@gmx.de +freenet-bin-0.7_alpha2.ebuild,
  -freenet-bin-0.7_alpha_pre1106.ebuild:
  New upstream release

  29 Jan 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_alpha_pre1105.ebuild,
  +freenet-bin-0.7_alpha_pre1106.ebuild:
  New upstream release

  27 Jan 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_alpha_pre1104.ebuild,
  +freenet-bin-0.7_alpha_pre1105.ebuild:
  New upstream release

  25 Jan 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_alpha_pre1103.ebuild,
  +freenet-bin-0.7_alpha_pre1104.ebuild:
  New upstream release

  25 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1103.ebuild,
  +freenet-bin-0.7_alpha_pre1103.ebuild:
  Correct naming scheme

  25 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1101.ebuild,
  +freenet-bin-0.7.1103.ebuild:
  New upstream release

  20 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1100.ebuild,
  +freenet-bin-0.7.1101.ebuild:
  New upstream release

  19 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1099.ebuild,
  +freenet-bin-0.7.1100.ebuild:
  New upstream release

  17 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1098.ebuild,
  +freenet-bin-0.7.1099.ebuild:
  New upstream release

  16 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1097.ebuild,
  +freenet-bin-0.7.1098.ebuild:
  New upstream release

  06 Jan 2008; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1097.ebuild:
  whitey

  04 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1096.ebuild,
  +freenet-bin-0.7.1097.ebuild:
  New upstream release
