@@ -1,8 +1,8 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
-DIST freenet-r17723-snapshot.jar 2421379 RMD160 28383de8a9632b788e103010802822f42f5e5039 SHA1 e4eecc33c9a89460509fe4c1eea3ac4a789c1840 SHA256 03154ccfa1803d1ce4600eae51aafada2825495daeb316744d2bbb009bb45efb
+DIST freenet-ext-18.jar 2465628 RMD160 b2f428b9935c3fcb2fbfd38ef0b48a9ab8513f54 SHA1 49f4c21ef42d9b95ca2816bfa79f635e69b89bbb SHA256 caa5869e77b92bddd2416fdf8852d264fee9be49b1260281a7af4d36f8faf81f
+DIST freenet-r17892-snapshot.jar 2432841 RMD160 a8bfb85e24ed89202430d3b868404f73b4419058 SHA1 ef4036770314f4966ede5655355f07e1fd245ee6 SHA256 6fd6d7a6ee34b1b7d879690a266abb95d7328c5f8c402f5673e5549f0a4a4136
 DIST freenet07.tar.gz 380903 RMD160 216fc44016efa6a19291d74cb2a46cb005efbb86 SHA1 0d86e6516daeee9aec9b1a67eb06a3e8953ed3c6 SHA256 0c225694d4c3c81f62ac07fc5004196fbf7807b946dbed63740fdbc77f631513
-DIST seednodes.fref 21476 RMD160 198b4e8a354b81627cdb1a56918efbc865e309e6 SHA1 85110203cd406b5febd2ec02f8ee7815ca5dbd11 SHA256 eb9866fa4a9f7eeaabc380a6749b05beac8fa366ae548e383a11f92ddf144816
-EBUILD freenet-bin-0.7_beta_pre1109.ebuild 2404 RMD160 7e8f05816cc4ea1032d18edd2a519c7026425d16 SHA1 3877f0e6985af4f8bb2c805b0fe0254a105f0da4 SHA256 d95b96420d414428bb37748f8ea4bd0544cdce6da37ac6193905cc82d37ce193
-MISC ChangeLog 6313 RMD160 93a703b00ce229469adea6cf9a7077566dac8696 SHA1 06b7edc7f18d33ae1c557aa83b64b0cbab67ee06 SHA256 bb814c64c9e5e6116b8a0d20c9e62e528510c21381af4a68edcaa7191f6b0f67
+DIST seednodes-20080214.fref 27921 RMD160 aeb86225ad9657bca01448f577b7a03e1d5bf925 SHA1 b1ef704f0615b8d02c50a0ba68d4b6103bd8e6df SHA256 308cb0fa06e87b23b03ffe9d79f1754c104e2528c584bcbe00817a4bc36e7140
+EBUILD freenet-bin-0.7_beta_pre1111.ebuild 2644 RMD160 5902ce0d2ad68713ec4016f4bf5add367c51657b SHA1 3e930213fc3e2e302a9f31b46926524bc80f726a SHA256 c276743fc5a14468837f1ce0152c10a8029f2da1a9942cd2609ae589f3890d0e
+MISC ChangeLog 6459 RMD160 1c442886f55bfb185df5c44b58e9dd60b0b3d8cc SHA1 40da81221ade6da484843405401db974bb73f874 SHA256 40d49cb04d67083a8d65f3befe438bfe867417a3acd434843541b8fef7666f11
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
