@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1109.tar.bz2 19287117 RMD160 10f42c982a6f4e5ca7a5dccb95daee51ef6b3e2c SHA1 7507860cd1fad7c137abe2b42318b85946b5d67e SHA256 d1c1af4aae6414e7e0286111f48e55bad8f6f415f4643b4a5db5d785fdab7511
-EBUILD freenet-0.7_beta_pre1109.ebuild 1421 RMD160 6dd2234f5515f1ab504cc157045d2d1578bc82c3 SHA1 f1cd93300651675d803602d9d030e08377f4801e SHA256 3a335f7528462cb0843bf8c18ea755080bf9d91bdbb7c5dfbdc972eef76931c5
-MISC ChangeLog 4720 RMD160 a2b3b11b396e1ad65d81acea9dc2b0fb2d1531a2 SHA1 9ee270379d9cb798bcc66275efc575bf95e74cd4 SHA256 0b48a7799622ab357ed2c2213d2cc922fc95f19ef286f67dfb91b59c031063e2
+DIST freenet-sources-v1111.tar.bz2 19295264 RMD160 e71e9996d9d4c04625481a6a4a0992afa2be9f36 SHA1 744de216b5c49e5ac2571f681b669b47ed29340a SHA256 b0562a8ac21d926ddf93740e4a0c00fd751c93755a6b6e1106017d2a00f4542a
+EBUILD freenet-0.7_beta_pre1111.ebuild 1421 RMD160 6dd2234f5515f1ab504cc157045d2d1578bc82c3 SHA1 f1cd93300651675d803602d9d030e08377f4801e SHA256 3a335f7528462cb0843bf8c18ea755080bf9d91bdbb7c5dfbdc972eef76931c5
+MISC ChangeLog 4856 RMD160 4166c0a8722ba03d64e0cace2e9f0750c0127c96 SHA1 7d440867c0e4c62c9926edd2b67771542c57c585 SHA256 f99d4435ef0dc771e5f901a1e1ccec2383eae1cde641bd8b4670b9cb9fc63ab5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
