@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Feb 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1109.ebuild,
+  +freenet-0.7_beta_pre1111.ebuild:
+  New upstream release
+
   09 Feb 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1108.ebuild,
   +freenet-0.7_beta_pre1109.ebuild:
   New upstream release
